package com.desenvolvimento.sistemas.model.domain;



public interface IEntity {

    public Long getId();
	public void setId(Long id);

}
